<resources>
    <string name="app_name">nmedia</string>
    <string name="hellostring">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes">Likes</string>
    <string name="description_repost">Reposts</string>
    <string name="description_viewing">Viewing</string>
    <string name="description_post_save">Save</string>
    <string name="description_newer">new posts</string>
    <string name="newer_posts">newer posts</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="text_edit">Edit message</string>
    <string name="chooser_repost">Repost</string>
    <string name="add_post">Add Post</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user">User %1$s get notification %2$s</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_new_post">%1$s published a new post:\n\n %2$s</string>
    <string name="error_loading">Loading error</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">No posts yet</string>
    <string name="attachment">Attachment</string>
    <string name="network_error">Network error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_db">Db error</string>
    <string name="menu_save">Save</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="sign_out_dialog">Are you sure?</string>
    <string name="positive_button">YES</string>
    <string name="negative_button">NO</string>
    <string name="auth_name">Name</string>
    <string name="error_edit">Can\'t be empty</string>

</resources>