<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CardPostFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/post_avatar_size"
            android:layout_height="@dimen/post_avatar_size"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_author_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/posts.json/data/authorAvatar" />

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@+id/barrier"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toBottomOf="@+id/author"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_post_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:icon="@drawable/ic_baseline_more_vert_24"
            style="@style/Widget.AppTheme.Viewing">
        </com.google.android.material.button.MaterialButton>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar,published,menu" />

        <ImageView
            android:id="@+id/attachmentView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:scaleType="centerCrop"
            android:contentDescription="@string/attachment"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintTop_toBottomOf="@id/content"
            app:layout_constraintBottom_toTopOf="@id/barrier2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:checkable="true"
            android:background="@android:color/transparent"
            app:iconTint="@color/colorAccent"
            app:icon="@drawable/ic_play_48"
            app:iconPadding="0dp"
            app:iconGravity="textStart"
            android:insetBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:insetTop="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="@id/barrier"
            app:layout_constraintBottom_toTopOf="@id/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:lineSpacingMultiplier="1.5"
            android:paddingTop="@dimen/common_spacing"
            android:paddingBottom="@dimen/common_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/video"
            tools:text="@sample/posts.json/data/content"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_likes"
            android:layout_marginTop="@dimen/common_spacing"
            app:icon="@drawable/ic_like_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier2"
            tools:cheked="@sample/posts.json/data/likedByMe"
            tools:text="@sample/posts.json/data/likes"
            style="@style/Widget.AppTheme.LikeButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/repost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_repost"
            android:layout_marginTop="@dimen/common_spacing"
            app:icon="@drawable/ic_baseline_share_24"
            app:layout_constraintStart_toEndOf="@+id/like"
            app:layout_constraintTop_toBottomOf="@+id/barrier2"
            tools:text="@sample/posts.json/data/repost"
            style="@style/Widget.AppTheme.RepostButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_viewing"
            android:layout_marginTop="@dimen/common_spacing"
            app:icon="@drawable/ic_baseline_remove_red_eye_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier2"
            tools:text="@sample/posts.json/data/viewing"
            style="@style/Widget.AppTheme.Viewing"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>